release/1.5.1/VERSION.md
# 1.5.1

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.5.1```   |
| Release Time   | ```2013-03-20T10:00:00+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```pre-1.6```   |
| sha1   | ```3d8e55480977e32acd9844e545177e69a52f594b```   |
| size   | ```74091```   |
| total size  | ```49505710```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/3d8e55480977e32acd9844e545177e69a52f594b/pre-1.6.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```047136381a552f34b1963c43304a1ad4dc0d2d8e```   |
| size   | ```5561287```   |
| url       | ```https://launcher.mojang.com/v1/objects/047136381a552f34b1963c43304a1ad4dc0d2d8e/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```d07c71ee2767dabb79fb32dad8162e1b854d5324```   |
| size   | ```2360013```   |
| url       | ```https://launcher.mojang.com/v1/objects/d07c71ee2767dabb79fb32dad8162e1b854d5324/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |