release/1.5.2/VERSION.md
# 1.5.2

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.5.2```   |
| Release Time   | ```2013-04-25T15:45:00+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```pre-1.6```   |
| sha1   | ```3d8e55480977e32acd9844e545177e69a52f594b```   |
| size   | ```74091```   |
| total size  | ```49505710```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/3d8e55480977e32acd9844e545177e69a52f594b/pre-1.6.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```465378c9dc2f779ae1d6e8046ebc46fb53a57968```   |
| size   | ```5564661```   |
| url       | ```https://launcher.mojang.com/v1/objects/465378c9dc2f779ae1d6e8046ebc46fb53a57968/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```f9ae3f651319151ce99a0bfad6b34fa16eb6775f```   |
| size   | ```2360903```   |
| url       | ```https://launcher.mojang.com/v1/objects/f9ae3f651319151ce99a0bfad6b34fa16eb6775f/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |